# CPPJunk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Watcher.h  etcd_client.cpp
AlignedBuffer/: CMakeLists.txt  main.cpp
AsyncWrapper/: CMakeLists.txt  main.cpp
BufferedOp/: CMakeLists.txt  main.cpp
CMakeExportTargets/: CMakeLists.txt  Foo.cpp  Foo.h
CMakeExportTargets/cmake/: CMakeExportTargets-config.cmake.in
DPDKTest/: CMakeLists.txt  main.cpp
ETCDClient/: CMakeLists.txt  etcd_client.cpp
ETCDClient/cmake/: FindGRPC.cmake
FiberSocket/: CMakeLists.txt  Client.cpp  Client.h  ErrorHandling.cpp  ErrorHandling.h  GreenExecutor.cpp  GreenExecutor.h  Server.cpp  Server.h  SocketOperations.cpp  SocketOperations.h  SocketSetup.cpp  SocketSetup.h  main.cpp
FileStorageLevels/: CMakeLists.txt  ReadLeveledStorage.cpp  Storage.h  main.cpp
HeapWalker/: HeapWalker.cpp  HeapWalker.sln  HeapWalker.vcxproj  HeapWalker.vcxproj.filters  ReadMe.txt  heap_walker.cpp  heap_walker.h  memory_block.cpp  memory_block.h  stdafx.cpp  stdafx.h  storage_classes.cpp  storage_classes.h
HeapWalker/MemoryMap/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MemoryBlock.cs  MemoryBlocksVisualizer.cs  MemoryDataXmlParser.cs  MemoryMap.csproj  MemoryMap.sln  ProcessOutputRedirection.cs  ResourceExecutableLauncher.cs
HeapWalker/MemoryMap/Properties/: AssemblyInfo.cs  Executables.Designer.cs  Executables.resx  Resources.Designer.cs  Settings.Designer.cs
HeapWalker/MemoryMap/Resources/: .gitignore
HeapWalker/libs/Win32/Debug/: libboost_serialization-vc100-mt-gd-1_47.lib
HeapWalker/libs/Win32/Release/: libboost_serialization-vc100-mt-1_47.lib
HeapWalker/libs/x64/Debug/: libboost_serialization-vc100-mt-gd-1_47.lib
HeapWalker/libs/x64/Release/: libboost_serialization-vc100-mt-1_47.lib
ISO3166/: data.txt
KiBKB/: CMakeLists.txt  KiBKB.h  main.cpp
LinuxSparseFiles/: CMakeLists.txt  main.cpp
MPMSQueue/: CMakeLists.txt  MPMCQueue.h
MTServer/: Client.cpp  Client.h  Server.h  client.cpp  server.cpp
NVMeTest/: CMakeLists.txt  NVMeManager.cpp  NVMeManager.h  main.cpp
RemoteDev/: CMakeLists.txt  main.cpp
S3Test/: CMakeLists.txt  DirectoryIterator.h  Downloader.cpp  Downloader.h  DownloaderV2.cpp  DownloaderV2.h  Fs.cpp  Fs.h  S3DirectoryIterator.cpp  S3DirectoryIterator.h  S3File.cpp  S3File.h  S3LazyListRetriever.cpp  S3LazyListRetriever.h  Uploader.cpp  Uploader.h  Utils.cpp  Utils.h  main.cpp
SearchAndReplace/: CMakeLists.txt  Manual.cpp  Manual.h  main.cpp
SlowDown/: CMakeLists.txt  FolderUploader.cpp  FolderUploader.h  S3MultipartUploader.cpp  S3MultipartUploader.h  Utils.cpp  main.cpp  vcpkg.json
StrangeQueue/: CMakeLists.txt  Queue.h  main.cpp
StringJoin/: CMakeLists.txt  main.cpp
StringJoin/docs/: index.html
Tests/shared_state_test/: CMakeLists.txt  Throughput.h  main.cpp
adler32/: .clang-format  Adler32.cpp  Adler32.h  Adler32Generic.cpp  Adler32Generic.h  Adler32SIMD.cpp  CMakeLists.txt  CRC32Intrinsic.cpp  CRC32SIMD.cpp  Crc32.cpp  Crc32.h  Crc32_constans.h  PreLoad.cmake  adler32_perf.cpp  adler32_tests.cpp  crc32_perf.cpp  crc32_test.cpp  tests_main.cpp
adler32/nonius/: nonius.h++
adler32/utils/: BufferUtils.h
allocator/no_paging_allocator/: ReadMe.txt  no_paging_allocator.cpp  no_paging_allocator.sln  no_paging_allocator.vcxproj  no_paging_allocator.vcxproj.filters  np_allocator.h  np_storage.h  pool.h  pool_allocator.h  stdafx.cpp
boost-beast/: CMakeLists.txt  websocket_client_coro.cpp  websocket_server_stackless.cpp
boostcoro/: CMakeLists.txt  main.cpp
flto/: CMakeLists.txt  main.cpp
gtestthrow/: CMakeLists.txt  main.cpp
module_rebase/: module_rebase.sln
module_rebase/module_rebase/: ReadMe.txt  module_rebase.cpp  module_rebase.vcxproj  module_rebase.vcxproj.filters  stdafx.cpp  stdafx.h
spdk_test/: CMakeLists.txt  NVMeManager.cpp  NVMeManager.h  NVMeStriper.cpp  NVMeStriper.h  Throughput.cpp  Throughput.h  main.cpp
string_test/: .gitignore  ReadMe.txt  stdafx.cpp  stdafx.h  string_test.cpp  string_test.sln  string_test.vcxproj  string_test.vcxproj.filters
untitled/: CMakeLists.txt
